--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-cli-boilerplate",
+  "name": "i18n-controller",
   "version": "1.0.0",
-  "description": "TypeScript cli boilerplate",
+  "description": "maeum i18n controller",
   "engines": {
     "node": ">=18"
   },
@@ -11,11 +11,14 @@
     "debug": "node --inspect-brk -r ts-node/register src/cli.ts",
     "prebuild": "pnpm run clean",
     "build": "tsc --incremental --noEmit --project tsconfig.json --tsBuildInfoFile .tsbuildinfo",
+    "dts": "tsc --project tsconfig.prod.json --declaration --emitDeclarationOnly --declarationDir dist/types/origin",
+    "dts-gen": "rollup --config ./.configs/rollup.mjs",
+    "dts:clean": "rimraf dist/types/origin",
     "esbuild-cjs": "FORMAT=cjs node .configs/esbuild.mjs",
     "esbuild-esm": "FORMAT=esm node .configs/esbuild.mjs",
-    "bundle-pack": "run-p esbuild-cjs esbuild-esm",
-    "bundle": "run-s bundle-pack",
-    "test": "jest --coverage",
+    "bundle-pack": "run-p esbuild-cjs esbuild-esm dts",
+    "bundle": "run-s clean bundle-pack dts-gen dts:clean",
+    "test": "vitest run --coverage",
     "lint": "eslint --cache .",
     "lint-staged": "lint-staged",
     "pub": "pnpm publish --registry http://localhost:8901",
@@ -40,13 +43,15 @@
   },
   "homepage": "https://github.com/imjuni/typescript-cli-boilerplate#readme",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@tsconfig/node18": "^18.2.2",
     "@types/jest": "^29.5.4",
     "@types/node": "^18.11.9",
-    "@types/source-map-support": "^0.5.7",
-    "@types/yargs": "^17.0.24",
+    "@types/node-polyglot": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "@vitest/coverage-istanbul": "^0.34.5",
+    "@vitest/coverage-v8": "^0.34.5",
     "cross-env": "^7.0.3",
     "deps-diff": "^1.0.2",
     "esbuild": "0.19.2",
@@ -60,24 +65,29 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
-    "jest": "^29.6.4",
+    "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
     "npm-run-all": "^4.1.5",
     "prettier-eslint": "^15.0.1",
     "prettier-plugin-organize-imports": "^3.2.3",
     "read-pkg": "^5.2.0",
     "rimraf": "^5.0.1",
+    "rollup": "^3.29.2",
+    "rollup-plugin-dts": "^6.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "tslib": "^2.5.2",
-    "tsx": "^3.12.8",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^0.34.5"
   },
   "dependencies": {
-    "consola": "^3.2.3",
+    "accept-language": "^3.0.18",
+    "jsonc-parser": "^3.2.0",
     "my-easy-fp": "^0.21.0",
-    "source-map-support": "^0.5.21",
-    "yargs": "^17.7.2"
+    "node-polyglot": "^2.5.0",
+    "type-fest": "^4.3.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
