--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
 
     /* Module Resolution Options */
     "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
+    "paths": {
+      "#/*": ["src/*"]
+    },
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
 
     /* Experimental Options */
@@ -37,6 +40,6 @@
     "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
     "pretty": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "vitest.config.ts"],
   "exclude": ["dist/**", ".configs/**"]
 }
