--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "eslint-plugin-jsdoc": "^46.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.0.0",
+    "fastify": "^4.23.2",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
@@ -113,5 +114,8 @@
     "*.{js,jsx,ts,tsx},*.json,.{eslintrc.cjs,prettierrc}": [
       "cross-env NODE_ENV=production prettier --ignore-path .eslintignore --parser json --write"
     ]
+  },
+  "peerDependencies": {
+    "fastify": "^4.23.2"
   }
 }
