--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@maeum/i18n-controller",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "description": "maeum i18n controller",
   "engines": {
     "node": ">=18"
@@ -19,7 +19,7 @@
     "test": "vitest run --coverage",
     "lint": "eslint --cache .",
     "lint-staged": "lint-staged",
-    "pub": "pnpm publish --registry http://localhost:8901",
+    "pub": "cross-env RELEASE_MODE=true pnpm publish --registry http://localhost:8901",
     "unpub": "pnpm unpublish typescript-cli-boilerplate@$npm_package_version --registry http://localhost:8901 --force",
     "pub:prod": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --access=public",
     "dd": "deps-diff md -d prod -d dev --title-list-type '*' --deps-list-type '*' --content-list-type '*'",
