--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "prebuild": "pnpm run clean",
-    "build": "tsc --incremental --noEmit --project tsconfig.json --tsBuildInfoFile .tsbuildinfo",
-    "dts": "tsc --project tsconfig.prod.json --declaration --emitDeclarationOnly --declarationDir dist/types/origin",
-    "dts-gen": "rollup --config ./.configs/rollup.mjs",
-    "dts:clean": "rimraf dist/types/origin",
+    "ctix": "ctix build --config .configs/.ctirc",
+    "ctix-rm": "ctix remove -p ./tsconfig.json --config .configs/.ctirc --force-yes --remove-backup",
+    "build": "pnpm run clean && tsc --incremental --noEmit --project tsconfig.json",
+    "dts-gen": "dts-bundle-generator --project tsconfig.dts.json -o dist/types/index.d.ts --no-banner src/index.ts",
     "esbuild-cjs": "FORMAT=cjs node .configs/esbuild.mjs",
     "esbuild-esm": "FORMAT=esm node .configs/esbuild.mjs",
-    "bundle-pack": "run-p esbuild-cjs esbuild-esm dts",
-    "bundle": "run-s clean bundle-pack dts-gen dts:clean",
+    "bundle-pack": "pnpm run ctix && run-p esbuild-cjs esbuild-esm dts-gen && pnpm run ctix-rm",
+    "bundle": "run-s clean bundle-pack",
     "test": "vitest run --coverage",
     "lint": "eslint --cache .",
     "lint-staged": "lint-staged",
-    "pub": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --registry http://localhost:8901",
+    "pub": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --registry http://localhost:8901 --no-git-checks",
     "unpub": "pnpm unpublish $npm_package_name@$npm_package_version --registry http://localhost:8901 --force",
     "pub:prod": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --access=public",
     "dd": "deps-diff md -d prod -d dev --title-list-type '*' --deps-list-type '*' --content-list-type '*'",
@@ -70,7 +69,9 @@
     "@vitest/coverage-istanbul": "^0.34.5",
     "@vitest/coverage-v8": "^0.34.5",
     "cross-env": "^7.0.3",
+    "ctix": "^2.0.0",
     "deps-diff": "^1.0.2",
+    "dts-bundle-generator": "^8.1.2",
     "esbuild": "0.19.2",
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -90,8 +91,6 @@
     "prettier-plugin-organize-imports": "^3.2.3",
     "read-pkg": "^5.2.0",
     "rimraf": "^5.0.1",
-    "rollup": "^3.29.2",
-    "rollup-plugin-dts": "^6.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
