feat(type): type declaration enhanced
- type declaration enhanced
- minimum support version 18.17.1 > 18.18.2
- deps
  - dev
    - add @rollup/plugin-node-resolve: 15.2.3
    - add rollup: 4.4.1
    - add rollup-plugin-dts: 6.1.0
    - add tsc-alias: 1.8.8
    - remove dts-bundle-generator: 8.1.2

--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "ctix": "ctix build --config .configs/.ctirc",
     "ctix-rm": "ctix remove -p ./tsconfig.json --config .configs/.ctirc --force-yes --remove-backup",
     "build": "pnpm run clean && tsc --incremental --noEmit --project tsconfig.json",
-    "dts-gen": "dts-bundle-generator --project tsconfig.dts.json -o dist/types/index.d.ts --no-banner src/index.ts",
+    "dts": "tsc -p tsconfig.dts.json",
+    "dts-alias": "tsc-alias -p tsconfig.dts.json",
+    "dts-gen": "rollup --config .configs/rollup.config.mjs",
+    "dts-pack": "run-s dts dts-alias dts-gen dts-rm",
+    "dts-rm": "rimraf dist/types/origin",
     "esbuild-cjs": "FORMAT=cjs node .configs/esbuild.mjs",
     "esbuild-esm": "FORMAT=esm node .configs/esbuild.mjs",
-    "bundle-pack": "pnpm run ctix && run-p esbuild-cjs esbuild-esm dts-gen && pnpm run ctix-rm",
-    "bundle": "run-s clean bundle-pack",
+    "bundle-pack": "run-p esbuild-cjs esbuild-esm dts-pack",
+    "bundle": "pnpm clean && run-s ctix bundle-pack ctix-rm",
     "test": "vitest run --coverage",
     "lint": "eslint --cache .",
     "lint-staged": "lint-staged",
     "pub": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --registry http://localhost:8901 --no-git-checks",
     "unpub": "pnpm unpublish $npm_package_name@$npm_package_version --registry http://localhost:8901 --force",
     "pub:prod": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --access=public",
-    "dd": "deps-diff md -d prod -d dev --title-list-type '*' --deps-list-type '*' --content-list-type '*'",
+    "dd": "deps-diff md -d prod -d dev --title-list-type 'm' --deps-list-type 'm' --content-list-type 'm'",
     "prepublishOnly": "node prepublish.cjs",
     "prepare": "husky install"
   },
@@ -59,6 +63,7 @@
   },
   "homepage": "https://github.com/maeumjs/i18n-controller.git#readme",
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.11.9",
     "@types/node-polyglot": "^2.4.5",
@@ -68,7 +73,6 @@
     "cross-env": "^7.0.3",
     "ctix": "^2.1.0",
     "deps-diff": "^1.0.2",
-    "dts-bundle-generator": "^8.1.2",
     "esbuild": "0.19.5",
     "eslint": "^8.53.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -87,7 +91,10 @@
     "prettier-plugin-organize-imports": "^3.2.4",
     "read-pkg": "^5.2.0",
     "rimraf": "^5.0.5",
+    "rollup": "^4.4.1",
+    "rollup-plugin-dts": "^6.1.0",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.5.2",
     "typescript": "^5.2.2",
