--- a/tsconfig.dts.json
+++ b/tsconfig.dts.json
@@ -7,6 +7,7 @@
     "emitDeclarationOnly": true,
     "rootDir": "src"
   },
+  "include": ["src/**/*.ts"],
   "tsc-alias": {
     "replacers": {
       "base-url": {
