chore(deps): upgrade dependencies
- remove unused variables
- deps
  - prod
    - change @maeum/tools: 1.5.0 > 1.6.0
    - change type-fest: 4.18.2 > 4.20.0
  - dev
    - change @typescript-eslint/eslint-plugin: 7.9.0 > 7.12.0
    - change @typescript-eslint/parser: 7.9.0 > 7.12.0
    - change ctix: 2.4.4 > 2.4.5
    - change esbuild: 0.21.2 > 0.21.4
    - change eslint-plugin-jsdoc: 48.2.4 > 48.2.9
    - change lint-staged: 15.2.2 > 15.2.5
    - change rollup: 4.17.2 > 4.18.0
    - change rollup-plugin-dts: 6.1.0 > 6.1.1
    - change tslib: 2.5.2 > 2.6.3

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,9 @@
   "arrowParens": "always",
   "parser": "typescript",
   "endOfLine": "lf",
-  "plugins": ["prettier-plugin-organize-imports"],
+  "plugins": [
+    "prettier-plugin-organize-imports"
+  ],
   "overrides": [
     {
       "files": "*.md",
@@ -23,7 +25,8 @@
       "files": [
         ".vscode/launch.json",
         ".vscode/settings.json",
-        ".swcrc",
+        "package.json",
+        "tsconfig.dts.json",
         "tsconfig.eslint.json",
         "tsconfig.prod.json",
         "tsconfig.json"
